# Minecraft-Clone-Windows

./: .gitignore  CMakeLists.txt  README.md  devLog.md  imgui.ini  toDo.md
assets/: blockAtlasJson.json
game/: CMakeLists.txt
game/src/: blockRegistry.cpp  camera.cpp  game.cpp
include/: blockRegistry.hpp  camera.hpp  game.hpp
include/input/: input_handler.hpp  input_keys.hpp
include/render/: renderable.hpp  renderer.hpp  textures.hpp  uiData.hpp
include/shaders/: chunkShader.fs  chunkShader.vs  cubeOutlineShader.fs  rectangleShader.vs  shader.h  (+3 more)
src/: blockRegistry.cpp  blockRegistry.hpp  camera.cpp  camera.hpp  game.cpp  game.hpp
testing/cppOpenGlTest/: CMakeLists.txt
testing/cppOpenGlTest/include/: newWorld.h
testing/cppOpenGlTest/include/glad/: glad.h
testing/cppOpenGlTest/src/: glad.c  main.cpp  newWorld.cpp
testing/gameStart/: CMakeLists.txt
testing/gameStart/include/: camera.hpp  game.hpp  input_handler.hpp  input_keys.hpp  model.hpp  renderer.hpp  world.hpp
testing/gameStart/include/glad/: glad.h
testing/gameStart/include/input/: input_handler.hpp  input_keys.hpp
testing/gameStart/include/render/: renderable.hpp  renderer.hpp
testing/gameStart/include/shaders/: shader.h
testing/gameStart/include/world/: block.hpp  world.hpp
testing/gameStart/src/: camera.cpp  game.cpp  glad.c  input_handler.cpp  main.cpp  model.cpp  renderer.cpp  world.cpp
testing/gameStart/src/input/: input_handler.cpp
testing/gameStart/src/render/: renderer.cpp
testing/gameStart/src/shaders/: shader.cpp
testing/gameStart/src/world/: block.cpp  world.cpp
(+72 files in other folders)
